# npingler

./: .envrc  Cargo.toml  README.md  config.toml  default.nix  flake.nix  shell.nix  treefmt.toml
.github/workflows/: main.yml  release.yaml  version.yaml
lib/: default.nix  makePackages.nix  makePins.nix  makeProfile.nix
nix/overlays/: lib.nix  local-pkgs.nix
nix/pkgs/: cargo-toml.nix  make-release-commit.nix  mkCheck.nix  npingler.nix  shell.nix  src.nix
nix/pkgs/checks/: clippy.nix  treefmt.nix
npins/: sources.json
src/: app.rs  cli.rs  config.rs  diff_trees.rs  directories.rs  fs.rs  id_hasher.rs  main.rs  pins.rs  strings_set.rs  tracing.rs  which.rs
src/clap/: mod.rs  shell_words.rs
src/nix/: build.rs  derivation.rs  mod.rs  registry.rs
src/nix/derivation/: diff.rs  mod.rs  serde.rs
