[package]
name = "npingler"
description = "A Nix profile manager for use with npins"
version = "0.2.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { version = "1.5.0", features = ["mmap"] }
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.4.7", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.5.57"
clap_mangen = { version = "0.2.29", optional = true }
command-error = { version = "0.6.0", features = ["tracing", "miette"] }
diff-trees = "0.1.2"
fs-err = "3.1.1"
gethostname = "1.0.2"
iddqd = { version = "0.3.11", default-features = false, features = ["serde", "std"] }
itertools = "0.14.0"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.2.2", features = ["supports-colors"] }
rustc-hash = "2.1.1"
same-file = "1.0.6"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
shell-words = "1.1.0"
shellexpand = "3.1.1"
tap = "1.0.1"
thiserror = "2.0.15"
toml = "0.9.5"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-human-layer = "0.1.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
utf8-command = "1.0.1"
walkdir = "2.4.0"
which = "8.0.0"
whoami = { version = "1.6.1", default-features = false }
xdg = "3.0.0"

[features]
clap_mangen = ["dep:clap_mangen"]

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[workspace.metadata.release]
# Set the commit message.
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
consolidate-commits = false # One commit per crate.
tag = false # Don't tag commits.
push = false # Don't do `git push`.
publish = false # Don't do `cargo publish`.
